--- a/latex/class_auxiliar_functions.tex
+++ b/latex/class_auxiliar_functions.tex
@@ -121,4 +121,4 @@ Best path found
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
 Auxiliar\+Functions.\+h\item 
-Auxiliar\+Functions.\+cpp\end{DoxyCompactItemize}
+\mbox{\hyperlink{_auxiliar_functions_8cpp}{Auxiliar\+Functions.\+cpp}}\end{DoxyCompactItemize}
