--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -222,6 +222,7 @@
 \chapter{File Documentation}
 \input{_airlines_8h_source}
 \input{_airport_8h_source}
+\input{_auxiliar_functions_8cpp}
 \input{_auxiliar_functions_8h_source}
 \input{csv_info_8h_source}
 \input{_graph_8h_source}
