--- a/latex/files.tex
+++ b/latex/files.tex
@@ -2,6 +2,7 @@
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{_airlines_8h_source}{Airlines.\+h}} }{\pageref{_airlines_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{_airport_8h_source}{Airport.\+h}} }{\pageref{_airport_8h_source}}{}
+\item\contentsline{section}{\mbox{\hyperlink{_auxiliar_functions_8cpp}{Auxiliar\+Functions.\+cpp}} }{\pageref{_auxiliar_functions_8cpp}}{}
 \item\contentsline{section}{\mbox{\hyperlink{_auxiliar_functions_8h_source}{Auxiliar\+Functions.\+h}} }{\pageref{_auxiliar_functions_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{csv_info_8h_source}{csv\+Info.\+h}} }{\pageref{csv_info_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{_graph_8h_source}{Graph.\+h}} }{\pageref{_graph_8h_source}}{}
